# minimum_example_libtorch

./: .gitignore  CMakeLists.txt  README.md  main.cpp
